--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Screenshot_v3_0.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="智能截屏 v3.0" Height="36" Width="850"
+        Title="智能截屏 v3.0" Height="36"
         Topmost="True"
         ResizeMode="CanResize"
         WindowStyle="None"
@@ -244,8 +244,8 @@
       </StackPanel>
 
       <!-- 信息显示和窗口控制按钮（右半部分） -->
-      <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center" Margin="8,0,0,0">
-        <TextBlock x:Name="StatusBarInfo" FontSize="12" TextWrapping="NoWrap" VerticalAlignment="Center" Foreground="#D8F3DC" Width="400" Height="20" Margin="0,0,8,0"/>
+      <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center" Margin="-180,0,0,0">
+        <TextBlock x:Name="StatusBarInfo" FontSize="12" TextWrapping="NoWrap" VerticalAlignment="Center" Foreground="#D8F3DC" Height="20" Margin="0,0,8,0"/>
         <!-- 窗口控制按钮 -->
         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
           <Button Content="—" Width="22" Height="22" Margin="0,0,3,0" 
