--- a/src/Screenshot.App/MainWindow.axaml
+++ b/src/Screenshot.App/MainWindow.axaml
@@ -36,6 +36,10 @@
               <MenuItem Header="{Binding OutputModeVideoOnlyLabel}" Command="{Binding SetOutputModeVideoOnlyCommand}" />
               <MenuItem Header="{Binding OutputModeAudioAndVideoLabel}" Command="{Binding SetOutputModeAudioAndVideoCommand}" />
             </MenuItem>
+            <MenuItem Header="录制方式">
+              <MenuItem Header="{Binding CaptureModeWindowLabel}" Command="{Binding SetCaptureModeWindowCommand}" />
+              <MenuItem Header="{Binding CaptureModeAnyRegionLabel}" Command="{Binding SetCaptureModeAnyRegionCommand}" />
+            </MenuItem>
             <MenuItem Header="视频合成方式">
               <MenuItem Header="{Binding VideoMergeLiveLabel}" Command="{Binding SetVideoMergeLiveCommand}" />
               <MenuItem Header="{Binding VideoMergePostLabel}" Command="{Binding SetVideoMergePostCommand}" />
@@ -66,8 +70,8 @@
         <Button Content="开始" Command="{Binding StartCommand}" Background="#1E8E5A" Foreground="#FFFFFF" Padding="8,1" FontSize="12" />
         <Button Content="停止" Command="{Binding StopCommand}" Background="#B33B3B" Foreground="#FFFFFF" Padding="8,1" FontSize="12" />
         <Button Content="截图" Click="OnSingleScreenshotClick" IsEnabled="{Binding IsEditingUnlocked}" Padding="6,1" FontSize="12" />
-        <Button Content="选择" Click="OnSelectRegionClick" IsEnabled="{Binding IsEditingUnlocked}" Padding="6,1" FontSize="12" />
-        <Button Content="恢复" Command="{Binding ResetSettingsCommand}" IsEnabled="{Binding IsEditingUnlocked}" Padding="6,1" FontSize="12" />
+        <Button Content="选择" Click="OnSelectRegionClick" IsEnabled="{Binding IsRegionSelectionEnabled}" Padding="6,1" FontSize="12" />
+        <Button Content="恢复" Command="{Binding ResetSettingsCommand}" IsEnabled="{Binding IsRegionSelectionEnabled}" Padding="6,1" FontSize="12" />
 
         <TextBlock Text="变化率:" Foreground="#EAF7F1" VerticalAlignment="Center" FontSize="12" />
         <TextBox x:Name="ScreenChangeRateBox" Width="22" Height="18" MinHeight="0" Text="{Binding ScreenChangeRate}" IsEnabled="{Binding IsEditingUnlocked}" FontSize="12" TextAlignment="Right" VerticalContentAlignment="Center" Padding="4,0" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" />
