快捷截图，框选后直接截图

--- a/src/Screenshot.App/MainWindow.axaml
+++ b/src/Screenshot.App/MainWindow.axaml
@@ -45,6 +45,7 @@
               <MenuItem Header="{Binding VideoMergePostLabel}" Command="{Binding SetVideoMergePostCommand}" />
             </MenuItem>
             <Separator />
+            <MenuItem Header="{Binding QuickScreenshotLabel}" Command="{Binding ToggleQuickScreenshotCommand}" />
             <MenuItem Header="{Binding KeepJpgLabel}" Command="{Binding ToggleKeepJpgCommand}" />
             <MenuItem Header="{Binding GeneratePptLabel}" Command="{Binding ToggleGeneratePptCommand}" />
             <Separator />
@@ -69,7 +70,6 @@
 
         <Button Content="开始" Command="{Binding StartCommand}" Background="#1E8E5A" Foreground="#FFFFFF" Padding="8,1" FontSize="12" />
         <Button Content="停止" Command="{Binding StopCommand}" Background="#B33B3B" Foreground="#FFFFFF" Padding="8,1" FontSize="12" />
-        <Button Content="截图" Click="OnSingleScreenshotClick" IsEnabled="{Binding IsEditingUnlocked}" Padding="6,1" FontSize="12" />
         <Button Content="选择" Click="OnSelectRegionClick" IsEnabled="{Binding IsRegionSelectionEnabled}" Padding="6,1" FontSize="12" />
         <Button Content="恢复" Command="{Binding ResetSettingsCommand}" IsEnabled="{Binding IsRegionSelectionEnabled}" Padding="6,1" FontSize="12" />
 
